jena-owl2: use java17 language features where it is possible